frontend modules tests

--- a/wordpress-from-wordpress.org-download/wordpress/wp-content/plugins/woo-bundle-choice/asset/css/admin-css.css
+++ b/wordpress-from-wordpress.org-download/wordpress/wp-content/plugins/woo-bundle-choice/asset/css/admin-css.css
@@ -3,3 +3,10 @@
   flex-direction: row;
   flex-wrap: wrap;  
 }
+.ui.tab .fields{
+	margin:0 0 1em !important;
+}
+
+#wpfooter{
+	position: relative !important;
+}
