--- a/asset/css/admin-css.css
+++ b/asset/css/admin-css.css
@@ -18,3 +18,19 @@
 .notice, div.error, div.updated{
 	margin: 5px 2px !important;
 }
+
+.ui.button.secondary.inverted{
+	color:#1b1c1d !important;
+    box-shadow: 0 0 0 2px #1b1c1d inset !important;
+    background-color: white !important;
+}
+
+.ui.button.secondary.inverted:hover{
+	color:#1b1c1d !important;	
+    box-shadow: 0 0 0 2px #1b1c1d inset !important;
+    background-color: white !important;
+}
+
+.ui.table,.ui.segment[class*="bottom attached"]{
+  border-radius:0 !important;
+}
